--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a{
 }
 
 main{
-    height: 70%;
+    height: 80%;
     display: flex;
     
 }
@@ -65,6 +65,15 @@ section{
     flex-direction: column;
     align-items: center;
     color: white;
+    margin-bottom: 50px;
+}
+
+#divTitles{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 70px;
 }
 
 #fontHallowen{
@@ -85,19 +94,20 @@ section{
 
 #divBtn{
     margin: 30px;
+    margin-right: 100px;
 }
 
 footer{
     height: 10%;
     display: flex;
     justify-content: flex-end;
-    align-items: center;
 }
 
 #rodape{
     width: 20%;
     display: flex;
     justify-content: space-around;
+
 }
 
 .imgRedesSociais{
